--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,8 @@ $font-clamp-xsm: clamp(.85rem, 1.25vw, 1.15rem);
 $font-clamp-sm: clamp(.95rem, 2vw, 1.125rem);
 $font-clamp-md: clamp(1.25rem, 2.25vw, 1.5rem);
 $font-clamp-lg: clamp(2.5rem, 6vw, 3rem);
+
+$font-clamp-h4: clamp(1rem, 1.5vw, 1.225rem);
 // TEXT COLORS
 $text-black: #000;
 $text-dark: #000;
