--- a/css/style.css
+++ b/css/style.css
@@ -1117,6 +1117,9 @@ hamburger
     opacity: 0;
     transform: translateY(1rem);
   }
+  50% {
+    transform: translateY(0rem);
+  }
   100% {
     opacity: 1;
     transform: translateY(0);
@@ -1138,7 +1141,10 @@ hamburger
 @keyframes name {
   0%, 20% {
     opacity: 0;
-    transform: translateY(5vh);
+    transform: translateY(1rem);
+  }
+  50% {
+    transform: translateY(0rem);
   }
   100% {
     opacity: 1;
@@ -1166,8 +1172,11 @@ hamburger
 }
 @keyframes meta {
   0%, 40% {
-    transform: translateY(5vh);
+    transform: translateY(1rem);
     opacity: 0;
+  }
+  60% {
+    transform: translateX(0rem);
   }
   100% {
     transform: translateY(0);
@@ -1219,11 +1228,11 @@ hamburger
 @keyframes show-cta {
   0%, 45% {
     opacity: 0;
-    transform: translateY(5vh);
+    transform: translateX(1rem);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
   }
 }
 .welcome-section .hero #cta-header::before, .welcome-section .hero #cta-header::after {
