--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -164,6 +164,9 @@
                             opacity: 0;
                             transform: translateY(1rem);
                         }
+                        50% {
+                            transform: translateY(0rem);
+                        }
                         100% {
                             opacity: 1;
                             transform: translateY(0);
@@ -188,7 +191,10 @@
                     @keyframes name {
                         0%, 20% {
                             opacity: 0;
-                            transform: translateY(5vh);
+                            transform: translateY(1rem);
+                        }
+                        50% {
+                            transform: translateY(0rem);
                         }
                         100% {
                             opacity: 1;
@@ -223,10 +229,12 @@
 
                 @keyframes meta {
                     0%, 40% {
-                        transform: translateY(5vh);
+                        transform: translateY(1rem);
                         opacity: 0;
                     }
-
+                    60% {
+                        transform: translateX(0rem);
+                    }
                     100% {
                         transform: translateY(0);
                         opacity: 1;
@@ -279,11 +287,12 @@
             @keyframes show-cta {
                 0%, 45% {
                     opacity: 0;
-                    transform:  translateY(5vh);
+                    transform:  translateX(1rem);
+                
                 }
                 100% {
                     opacity: 1;
-                    transform: translateY(0);
+                    transform: translateX(0);
                 }
             }
 
