--- a/css/style.css
+++ b/css/style.css
@@ -1139,7 +1139,7 @@ hamburger
   animation: name 8s ease forwards 4s;
 }
 @keyframes name {
-  0%, 20% {
+  0%, 15% {
     opacity: 0;
     transform: translateY(1rem);
   }
@@ -1168,14 +1168,14 @@ hamburger
   color: #bfbfbf;
   margin-top: 0.5rem;
   font-family: "Montserrat", sans-serif;
-  animation: meta 6s ease forwards 4s;
+  animation: meta 8s ease forwards 4s;
 }
 @keyframes meta {
-  0%, 40% {
+  0%, 20% {
     transform: translateY(1rem);
     opacity: 0;
   }
-  60% {
+  50% {
     transform: translateX(0rem);
   }
   100% {
@@ -1226,9 +1226,12 @@ hamburger
   }
 }
 @keyframes show-cta {
-  0%, 45% {
+  0%, 30% {
     opacity: 0;
     transform: translateX(1rem);
+  }
+  50% {
+    transform: translateX(0);
   }
   100% {
     opacity: 1;
