--- a/css/style.css
+++ b/css/style.css
@@ -1857,6 +1857,7 @@ hamburger
   justify-content: space-between;
   padding: 0.5rem 0;
   margin: 0.25rem auto 1rem;
+  margin: 0 auto 1rem;
   border-radius: 0.25rem;
 }
 @media (min-width: 820px) {
@@ -1868,7 +1869,7 @@ hamburger
 }
 #skills .skills .skills-intro .skills-icons svg {
   height: 5rem;
-  height: clamp(5rem, 10vw, 8rem);
+  height: clamp(5rem, 10vw, 7rem);
   width: auto;
   fill: #20262e;
   transition: 0.25s;
@@ -1877,6 +1878,22 @@ hamburger
   transform: scale(1.025);
   transition: 0.25s;
   fill: #15191e;
+}
+#skills .skills .skills-intro .skills-icons.io-item svg {
+  transform: scale(0.8);
+  transition: 1s;
+}
+#skills .skills .skills-intro .skills-icons.active-item svg {
+  transform: scale(1);
+}
+#skills .skills .skills-intro .skills-icons.active-item svg:nth-child(1) {
+  transition-delay: 0.25s;
+}
+#skills .skills .skills-intro .skills-icons.active-item svg:nth-child(2) {
+  transition-delay: 0.35s;
+}
+#skills .skills .skills-intro .skills-icons.active-item svg:nth-child(3) {
+  transition-delay: 0.45s;
 }
 #skills .skills .skills-intro .skills-drop {
   text-align: left;
