--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -59,6 +59,7 @@
                 // justify-content: space-evenly;
                 padding: .5rem 0;
                 margin: .25rem auto 1rem;
+                margin: 0 auto 1rem;
                 border-radius: $border-radius-sm;
                 @include sm {
                     // justify-content: space-around;
@@ -73,7 +74,7 @@
                     // width: 100%;
                     // border: 1px solid red;
                     height: 5rem;
-                    height: clamp(5rem, 10vw, 8rem);
+                    height: clamp(5rem, 10vw, 7rem);
                     width: auto;
                     fill: $overlay-blue-darker;
                     // stroke: green;
@@ -87,6 +88,28 @@
                         transform: scale(1.025);
                         transition: .25s;
                         fill: $overlay-blue-darkest;
+                    }
+                }
+
+                // SKILLS ICONS IO
+                &.io-item {
+                    svg {
+                        transform: scale(.8);
+                        transition: 1s;
+                    }
+                }
+                &.active-item {
+                    svg {
+                        transform: scale(1);
+                        &:nth-child(1){
+                            transition-delay: .25s;
+                        }
+                        &:nth-child(2){
+                            transition-delay: .35s;
+                        }
+                        &:nth-child(3){
+                            transition-delay: .45s;
+                        }
                     }
                 }
             }
