--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -52,18 +52,14 @@
 
             .skills-icons {
                 // border: 1px solid $overlay-blue-dark;
-                background: linear-gradient(0deg, #f4f4f4, #fff, #f4f4f4);
+                background-image: linear-gradient(0deg, #f4f4f4, #fff, #f4f4f4);
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                // justify-content: space-evenly;
                 padding: .5rem 0;
                 margin: .25rem auto 1rem;
                 margin: 0 auto 1rem;
                 border-radius: $border-radius-sm;
-                @include sm {
-                    // justify-content: space-around;
-                }
                 @include lg {
                     justify-content: center;
                     gap: 10vw;
