--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -52,7 +52,7 @@
 
             .skills-icons {
                 // border: 1px solid $overlay-blue-dark;
-                background-image: linear-gradient(0deg, #f4f4f4, #fff, #f4f4f4);
+                background-image: linear-gradient(0deg, #f4f4f4, #fafafa, #f4f4f4);
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
