--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -80,11 +80,9 @@
                         // height: 8rem;
                     }
 
-                    &:hover {
-                        transform: scale(1.025);
-                        transition: .25s;
-                        fill: $overlay-blue-darkest;
-                    }
+                    // #SVGRepo_iconCarrier {
+                    //     fill: yellow;
+                    // }
                 }
 
                 // SKILLS ICONS IO
