--- a/css/style.css
+++ b/css/style.css
@@ -1004,8 +1004,8 @@ hamburger
 
 .welcome-section {
   padding: 0;
-  min-height: 100vh;
   width: 100%;
+  height: 95vh;
   background: #15191e;
   background: linear-gradient(#15191e 30%, #000 60%);
   background: linear-gradient(90deg, #0009 50%, #0004 80%);
@@ -1912,8 +1912,8 @@ hamburger
   width: 100%;
 }
 #skills .skills .dropdown.io-item {
-  transform: scale(1) translateY(5vh);
-  opacity: 0;
+  transform: scale(0.7) translateY(5vh);
+  opacity: 1;
   transition: 1s;
 }
 #skills .skills .dropdown.active-item {
@@ -2244,8 +2244,8 @@ hamburger
   width: 100%;
 }
 #skills .skills .io-container.io-item .skills-intro, #skills .skills .io-container.io-item .dropdown {
-  opacity: 0;
-  transform: translateY(5vh);
+  opacity: 1;
+  transform: scale(0.9);
   transition: 1s;
 }
 #skills .skills .io-container.active-item .skills-intro, #skills .skills .io-container.active-item .dropdown {
@@ -4459,7 +4459,6 @@ body span {
 section {
   padding: 5vh 0;
   width: 100%;
-  min-height: 100vh;
 }
 section .section-title {
   font-size: 2.25rem;
@@ -4509,7 +4508,7 @@ section .section-title span {
 }
 section .section-title.io-item {
   opacity: 1;
-  transform: scale(0.7) translateY(5vh);
+  transform: scale(0.8);
   transition: 1s;
 }
 section .section-title.io-item span {
@@ -4517,10 +4516,10 @@ section .section-title.io-item span {
 }
 section .section-title.active-item {
   opacity: 1;
-  transform: scale(1) translateY(0);
+  transform: scale(1);
 }
 section .section-title.active-item span {
-  animation: section-span 3s ease-in-out infinite 1s;
+  animation: section-span 3s ease-in-out infinite 0.25s;
 }
 
 .section-pad {
