--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,8 +1,9 @@
 // HERO
 .welcome-section {
     padding: 0;
-    min-height: 100vh;
+    // min-height: 100vh;
     width: 100%;
+    height: 95vh;
     background: $overlay-blue-darkest;
     background: linear-gradient( $overlay-blue-darkest 30%, #000 60%);
     // background: linear-gradient( 90deg, #000 50%, #0000ff 80%);
@@ -11,6 +12,7 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
+    // border: 4px solid yellow;
     // MOBILE HERO IMG
     @media (max-width: 1024px){
         
@@ -74,7 +76,6 @@
     .hero {
         // overflow: hidden;
         position: relative;
-        
         // HERO IMAGE CONTAINER WITH OVERLAY BLEND MODE
         .hero-bg {
             @media (min-width: 1024px){
