--- a/sass/style.scss
+++ b/sass/style.scss
@@ -63,7 +63,7 @@ body {
 section {
     padding: 5vh 0;
     width: 100%;
-    min-height: 100vh;
+    // min-height: 100vh;
     // border: 2px solid red;
     // section-title
 .section-title {
@@ -118,7 +118,7 @@ section {
     }
     &.io-item {
         opacity: 1;
-        transform: scale(.7) translateY(5vh);
+        transform: scale(.8) ;
         transition: 1s;
         span {
             animation: none;
@@ -126,9 +126,9 @@ section {
     }
     &.active-item {
         opacity: 1;
-        transform: scale(1) translateY(0);
+        transform: scale(1);
         span {
-            animation: section-span 3s ease-in-out infinite 1s;
+            animation: section-span 3s ease-in-out infinite .25s;
         }
     }
 }
