--- a/css/style.css
+++ b/css/style.css
@@ -3081,7 +3081,7 @@ hamburger
 }
 @media (max-width: 820px) {
   .work .work-container .item.io-item {
-    opacity: 0;
+    opacity: 1;
     transform: translateY(5vh);
     transition: 1.25s;
   }
@@ -3092,12 +3092,12 @@ hamburger
 }
 @media (min-width: 820px) {
   .work .work-container .item.io-item .item-header {
-    opacity: 0;
+    opacity: 1;
     transform: translateX(5vw);
     transition: 1s;
   }
   .work .work-container .item.io-item .item-content {
-    opacity: 0;
+    opacity: 1;
     transform: translateX(-5vw);
     transition: 1s;
   }
@@ -3589,7 +3589,7 @@ hamburger
   transition: 0.2s;
 }
 .about .col-right .article-container article p a.cv {
-  background-color: #29323c;
+  background-color: #20262e;
   color: #f4f4f4;
   padding: 0 0.25rem;
 }
@@ -3615,7 +3615,7 @@ hamburger
   font-size: 2rem;
   font-size: clamp(2rem, 5vw, 2.25rem);
   float: left;
-  background: #15191e;
+  background: #20262e;
   color: #f4f4f4;
   padding: 0 0.1em;
   margin-right: 0.1em;
@@ -3634,13 +3634,24 @@ hamburger
   }
 }
 .about .col-right .article-container article .about-intro.io-item {
-  opacity: 0;
+  opacity: 1;
   transform: translateY(5vh);
   transition: 1s;
+}
+.about .col-right .article-container article .about-intro.io-item .intro.intro::first-letter {
+  background-color: #29323c;
 }
 .about .col-right .article-container article .about-intro.active-item {
   opacity: 1;
   transform: translateY(0);
+}
+.about .col-right .article-container article .about-intro.active-item .intro {
+  transition: 5s;
+}
+.about .col-right .article-container article .about-intro.active-item .intro.intro::first-letter {
+  background-color: #20262e;
+  box-shadow: 1px 3px 0 rgba(0, 0, 0, 0.1);
+  transition: 2s;
 }
 .about .col-right .article-container article .about-body.io-item {
   opacity: 0;
