--- a/css/style.css
+++ b/css/style.css
@@ -1811,30 +1811,26 @@ hamburger
   background-size: 100%, 1em 1em;
 }
 
+#skills .skills-header {
+  padding: 5vh 5vw 0;
+}
 #skills .skills {
-  flex-direction: column;
-  justify-content: flex-start;
-  text-align: center;
   background: #fff;
   min-height: auto;
 }
 #skills .skills .skills-intro {
-  text-align: left;
-  margin: 0 auto 0;
-  padding: 2.5vh 2.5vw 0 5vw;
+  padding: 0 2.5vw 0 5vw;
   position: relative;
   z-index: 30;
 }
 @media (min-width: 576px) {
   #skills .skills .skills-intro {
-    padding: 5vh 5vw;
+    padding: 0vh 5vw;
   }
 }
 @media (min-width: 768px) {
   #skills .skills .skills-intro {
     width: 100%;
-    padding: 0vh 5vw 0;
-    text-align: center;
   }
 }
 #skills .skills .skills-intro .skills-article p {
@@ -1865,6 +1861,9 @@ hamburger
     justify-content: center;
     gap: 10vw;
     margin: 5vh auto;
+    position: absolute;
+    top: 0;
+    right: 5vw;
   }
 }
 #skills .skills .skills-intro .skills-icons svg {
@@ -1896,18 +1895,12 @@ hamburger
   font-size: 1rem;
   font-size: clamp(.95rem, 2vw, 1.125rem);
 }
-@media (min-width: 768px) {
-  #skills .skills .skills-intro .skills-drop {
-    text-align: center;
-  }
-}
 #skills .skills .skills-intro .skills-drop .skills-drop-p {
   font-weight: 500;
   font-size: inherit;
 }
 #skills .skills .dropdown {
   position: relative;
-  margin: 0 auto;
   z-index: 4;
   width: 100%;
 }
@@ -1936,7 +1929,6 @@ hamburger
   font-size: 1.2rem;
   font-size: clamp(1.1rem, 2.5vw, 1.25rem);
   font-weight: 400;
-  text-align: center;
   text-transform: capitalize;
   letter-spacing: 0.025rem;
   border: none;
@@ -1949,7 +1941,6 @@ hamburger
 }
 @media (min-width: 768px) {
   #skills .skills .dropdown .dropbtn {
-    margin: 2.5vh auto;
     justify-content: center;
     padding: 0.5rem 2rem;
   }
@@ -2281,37 +2272,41 @@ hamburger
   transform: scale(1);
 }
 
-#contact {
-  padding-bottom: 0;
-}
 #contact .contact {
   flex-direction: column;
   justify-content: start;
   width: 100%;
   margin: 0 auto;
-  padding: 0vh 5vw 5vh;
+  padding: 5vh 5vw 5vh;
   position: relative;
   transform-style: preserve-3d;
+}
+@media (min-width: 820px) {
+  #contact .contact {
+    padding: 5vh 5vw 5vh;
+  }
 }
 #contact .contact .contact-header {
   width: 100%;
   height: auto;
   background: #fff;
-  margin-bottom: 5vh;
   z-index: 10;
 }
 #contact .contact .contact-items {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5vh;
+  border: 2px solid blue;
 }
 @media (min-width: 1024px) {
   #contact .contact .contact-items {
     width: 100%;
-    display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
     padding: 0;
-    margin: 0 auto;
+    margin: 5vh auto;
     gap: 0.5rem;
   }
 }
@@ -2323,7 +2318,6 @@ hamburger
   gap: 1rem;
   color: #15191e;
   text-align: center;
-  margin: 5vh auto;
   position: relative;
   border-radius: 0.5rem;
   transform: preserve-3d;
@@ -2585,6 +2579,9 @@ hamburger
   transition-delay: 0.5s;
 }
 
+#projects {
+  padding: 0 5vw 10vh;
+}
 #projects .projects {
   flex-direction: column;
   width: 100%;
@@ -2597,6 +2594,7 @@ hamburger
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  gap: 10vh;
   z-index: 10;
 }
 #projects .projects .all-projects[data-scroll] {
@@ -2608,21 +2606,17 @@ hamburger
   align-items: center;
   justify-content: center;
   flex-direction: column-reverse;
-  width: 90%;
-  border: 2px solid #485563;
+  border: 1px solid #29323c;
   outline: none;
-  overflow: hidden;
-  margin: 1.5rem auto;
-  overflow: hidden;
   border-radius: 0.5rem;
+  overflow: hidden;
+  overflow: hidden;
 }
 @media (min-width: 768px) {
   #projects .projects .all-projects .project-item {
     height: 350px;
-    width: 90%;
-    border-radius: 0.5rem;
+    width: 100%;
     flex-direction: row;
-    margin: 1.5em auto;
     position: relative;
   }
   #projects .projects .all-projects .project-item:nth-child(even) {
@@ -2644,7 +2638,6 @@ hamburger
 }
 @media (min-width: 768px) {
   #projects .projects .all-projects .project-item .project-tile {
-    flex-basis: 50%;
     padding: 2em;
   }
 }
@@ -3440,12 +3433,10 @@ hamburger
   position: relative;
 }
 .about .col-right .section-title {
-  text-align: center;
-  font-size: 2.35em;
+  text-align: left;
 }
 .about .col-right .section-title::after {
   width: 80%;
-  margin: 0 auto;
 }
 @media (min-width: 768px) {
   .about .col-right {
@@ -3455,6 +3446,7 @@ hamburger
   }
 }
 .about .col-right .about-title {
+  border: 4px solid yellow;
   display: flex;
   flex-direction: column;
   padding: 1em 1.3em;
@@ -3776,7 +3768,6 @@ hamburger
 }
 #footer .footer .footer-section-title {
   color: #ffff;
-  text-align: center;
   text-transform: capitalize;
   margin-bottom: 1.5em;
   font-size: 2em;
@@ -4479,9 +4470,8 @@ section .section-title {
   overflow: hidden;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
-  text-align: center;
   font-family: "Kanit", sans-serif;
-  -webkit-box-reflect: below -1rem linear-gradient(transparent, #0003);
+  -webkit-box-reflect: below -0.9rem linear-gradient(transparent, #0003);
 }
 @media (min-width: 768px) {
   section .section-title {
@@ -4519,7 +4509,6 @@ section .section-title span {
 }
 section .section-title.io-item {
   opacity: 1;
-  transform: scale(0.8);
   transition: 1s;
 }
 section .section-title.io-item span {
@@ -4527,7 +4516,6 @@ section .section-title.io-item span {
 }
 section .section-title.active-item {
   opacity: 1;
-  transform: scale(1);
 }
 section .section-title.active-item span {
   animation: section-span 3s ease-in-out infinite 0.25s;
