--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -18,7 +18,7 @@
         // section title
         .footer-section-title {
                 color: #ffff;
-                text-align: center;
+                // text-align: center;
                 text-transform: capitalize;
                 margin-bottom: 1.5em;
                 font-size: 2em;
