--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,40 +1,23 @@
 // projects
 #projects {
+    // border: 2px solid red;
+    padding: 0 5vw 10vh;
     // projects container
     .projects {
         flex-direction: column;
         width: 100%;
         margin: 0 auto;
-        // padding: 0 0 10vh 0;
         background-color: $background-light;
         position: relative;
-        // section header
-        // &-header {
-        //     width: 100%;
-        //     height: 170px;
-        //     background: $background-light;
-        //     margin-bottom: 2em;
-        //     z-index: 2;
-        //     // section header h1
-        //     h1 {
-        //         margin-bottom: 50px;
-        //         color: $span-gold;
-        //         text-shadow: 3px 2px 2px #000;
-        //         font-weight: 900;
-        //         &::before {
-        //             opacity: .7;
-        //             top: 2.25em;
-        //         }
-        //     }
-        //     // end of section header h1
-        // }
-        // end of section header
+        
         // project items
         .all-projects {
+            // border: 2px solid blue;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            gap: 10vh;
             z-index: 10;
             // DATA-SCROLL
             &[data-scroll] {
@@ -47,32 +30,27 @@
                 align-items: center;
                 justify-content: center;
                 flex-direction: column-reverse;
-                width: 90%;
-                border: 2px solid $overlay-blue-light;
+                border: 1px solid $overlay-blue-dark;
                 outline: none;
+                border-radius: .5rem;
                 overflow: hidden;
                 // project items on desktop : row
                 @media (min-width: 768px) {
                     height: 350px;
-                    width: 90%;
-                    border-radius: .5rem;
+                    width: 100%;
                     flex-direction: row;
-                    margin: 1.5em auto;
                     position: relative;
 
                     &:nth-child(even) {
                         flex-direction: row-reverse;
                     }
                 }
-                // end of project items on desktop : row
-                margin: 1.5rem auto;
                 overflow: hidden;
-                border-radius: .5rem;
                 // project tile
                 .project-tile {
                     // border: 3px solid $span-gold;
                     @media (min-width: 768px){
-                        flex-basis: 50%;
+                        // flex-basis: 50%;
                         padding: 2em;
                     }
 
